--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,8 @@
 <head>
 </head>
 <body>
-  {{ content }}
+  <div class="entry-content" id="entry-content-text">
+    {{ content }}
+  </div>
 </body>
 <html>
