--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,59 +160,37 @@
         };
 
         var windowLocation = '';
-        var showSubMenu = function (submenuName) {
-          var selector = '#' + submenuName;
-          var subMenu = $(selector);
-
-          var subMenuContentHtml = $(subMenu.html);
-
-          var titles = $('.entry-title', subMenuContentHtml);
-
-          subMenu.empty();
-          titles.each(function (i) {
-            //bit of hackage to select the link for easy modification
-            var entry = $('a', '<span>' + this.innerHTML + '</span>');
-            entry.attr('class', 'start-menu-link start-menu-item');
-
-            subMenu.append(entry.wrap('<p>').unwrap());
-            });
-
-            var content = $('#content-body');
-            var entries = $('.start-menu-link', subMenu);
-            entries.each(function () {
-              $(this).bind('click', function () {
+          var entries = $('.start-menu-link', subMenu);
+          entries.each(function () {
+            $(this).bind('click', function () {
+              windowLocation = this.href;
+              $.get(this.href)
+              .done(function (data) {
                 $('#content-body').empty();
                 $('#content-header').empty();
+                var responseTitle = $('.entry-title', "<p>" + data + "</p>");
+                var responseBody = $('.entry-body', "<p>" + data + "</p>");
 
-                windowLocation = this.href;
-                $.get(this.href)
-                .done(function (data) {
-                  $('#content-body').empty();
-                  $('#content-header').empty();
-                  var responseTitle = $('.entry-title', "<p>" + data + "</p>");
-                  var responseBody = $('.entry-body', "<p>" + data + "</p>");
+                $('#content-body').append(responseBody);
+                $('#content-header').append(responseTitle);
 
-                  $('#content-body').append(responseBody);
-                  $('#content-header').append(responseTitle);
+                history.pushState({}, '', windowLocation);
 
-                  history.pushState({}, '', windowLocation);
+                var scrollSettings = {
+                  cursorcolor: '#00ff00',
+                  autohidemode: false,
+                  cursorborder: '0px',
+                  cursorborderradius: '0px'
+                };
 
-                  var scrollSettings = {
-                    cursorcolor: '#00ff00',
-                    autohidemode: false,
-                    cursorborder: '0px',
-                    cursorborderradius: '0px'
-                  };
-
-                  var wrapper = $('#content-body');
-                  wrapper.niceScroll(scrollSettings);
-                });
-
-                hideMenus();
-                return false;
+                var wrapper = $('#content-body');
+                wrapper.niceScroll(scrollSettings);
               });
+
+              // hideMenus();
+              return false;
             });
-          };
+          });
 
           $('.start-menu-link').bind('click', function () {
             // We need to save the link name so it's skipped
