Submenu not defined

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,7 +160,7 @@
         };
 
         var windowLocation = '';
-          var entries = $('.start-menu-link', subMenu);
+          var entries = $('.start-menu-link');
           entries.each(function () {
             $(this).bind('click', function () {
               windowLocation = this.href;
