fix selector for navigation link

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
         {% for post in posts %}
         {% if post.url %}
         <li>
-          <a href="{{ post.url }}" class="start-menu-link start-menu-item">
+          <a href="{{ post.url }}" class="start-menu-link start-menu-item navigation-link">
             {{ post.title | strip_newlines }}
           </a>
         </li>
