--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,10 @@
 <head>
 </head>
 <body>
-  <div class="entry-content" id="entry-content-text">
+  <div class="entry-title" id="entry-title">
+    {{ title }}
+  </div>
+  <div class="entry-content" id="entry-content">
     {{ content }}
   </div>
 </body>
