--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@
 <head>
 </head>
 <body>
-  <div class="entry-title" id="entry-title">
+  <div id="title">
     {{ title }}
   </div>
-  <div class="entry-content" id="entry-content">
+  <div id="content">
     {{ content }}
   </div>
 </body>
