--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -171,7 +171,7 @@
                 $('#content-header').empty();
 
                 var responseTitle = $($(data)[1]).html();
-                var responseBody = $($(data)[3]).html();
+                var responseBody = $('#content-body #content', data).html();
 
                 $('#content-body').append(responseBody);
                 $('#content-header').append(responseTitle);
