hide menu on page content load

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -187,6 +187,8 @@
 
                 var wrapper = $('#content-body');
                 wrapper.niceScroll(scrollSettings);
+
+                $('.start-menu-display').css('display', 'none');
               });
 
               // hideMenus();
