--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,7 +188,7 @@
                 var wrapper = $('#content-body');
                 wrapper.niceScroll(scrollSettings);
 
-                $('.start-menu-display').css('display', 'none');
+                $('#start-menu-display').css('display', 'none');
               });
 
               // hideMenus();
