--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,8 @@
   <script src="/javascript/jquery.jquery-scroll.js"></script>
   <link rel="stylesheet" href="/css/jquery.jquery-scroll.css">
 
+  <!-- Font Awesome - icons as a font -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   <script type="text/javascript">
     // Default stream settings
