add social media icons

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,4 +33,8 @@
       {% endfor %}
     </ul>
   </div>
+  <div class="social-media">
+    <a href="" class="linkedin fa fa-linkedin" ></a>
+    <a href="" class="github fa fa-github"></a>
+  </div>
 </div>
