--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
   <script src="/javascript/jquery-1.9.1.js"></script>
   <script src="/javascript/library.js"></script>
+  <script src="/javascript/main.js"></script>
   <script src="/javascript/glyph-stream.js"></script>
 
   <script src="/javascript/jquery.jquery-scroll.js"></script>
