actually include the changes this time

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,4 +33,16 @@
       {% endfor %}
     </ul>
   </div>
+  <div class="social-media-structure social-media-style">
+    <a href="mailto:kenneth.posey@gmail.com" target="_blank"
+      class="email fa fa-envelope"></a>
+    <a href="//twitter.com/mr_pleco" target="_blank"
+      class="twitter fa fa-twitter"></a>
+      <a href="//github.com/Kenneth-Posey/" target="_blank"
+      class="github fa fa-github"></a>
+    <a href="//www.linkedin.com/pub/kenneth-posey/72/b43/23a/" target="_blank"
+      class="linkedin fa fa-linkedin" ></a>
+    <a href="//stackexchange.com/users/281107/kenneth-posey" target="_blank"
+      class="stackexchange fa fa-stack-exchange"></a>
+  </div>
 </div>
