--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,19 +4,18 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/matrix_font/matrix_font.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/oldmain.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/structure.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/styling.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/matrix_font/matrix_font.css" }}">
+  <link rel="stylesheet" href="{{ "/css/oldmain.css" }}">
+  <link rel="stylesheet" href="{{ "/css/structure.css" }}">
+  <link rel="stylesheet" href="{{ "/css/styling.css" }}">
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <script type="text/javascript" src="{{ "/javascript/jquery-1.9.1.js" }}"></script>
+  <script type="text/javascript" src="{{ "/javascript/library.js" }}"></script>
+  <script type="text/javascript" src="{{ "/javascript/main.js" }}"></script>
+  <script type="text/javascript" src="{{ "/javascript/glyph-stream.js" }}"></script>
 
-  <script src="/javascript/jquery-1.9.1.js"></script>
-  <script src="/javascript/library.js"></script>
-  <script src="/javascript/glyph-stream.js"></script>
-
-  <script src="/javascript/jquery.jquery-scroll.js"></script>
-  <link rel="stylesheet" href="/css/jquery.jquery-scroll.css">
+  <script type="text/javascript" src="{{ "/javascript/jquery.jquery-scroll.js" }}"></script>
+  <link rel="stylesheet" href="{{ "/css/jquery.jquery-scroll.css" }}">
 
   <!-- Font Awesome - icons as a font -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
