--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,40 +105,6 @@
         wrapper.niceScroll(scrollSettings);
       };
 
-      var changeWindow = function (self) {
-        $(self).bind('click', function () {
-          windowLocation = self.href;
-          $.get(self.href)
-          .done(function (data) {
-            $('#content-body').empty();
-            $('#content-header').empty();
-
-            var responseTitle = $($(data)[1]).html();
-            var responseBody = $('#content-body #content', data).html();
-
-            $('#content-body').append(responseBody);
-            $('#content-header').append(responseTitle);
-
-            history.pushState({}, '', windowLocation);
-
-            var scrollSettings = {
-              cursorcolor: '#00ff00',
-              autohidemode: false,
-              cursorborder: '0px',
-              cursorborderradius: '0px'
-            };
-
-            var wrapper = $('#content-body');
-            wrapper.niceScroll(scrollSettings);
-
-            $('#start-menu-display').css('display', 'none');
-          });
-
-          // hideMenus();
-          return false;
-        });
-      };
-
       var state = true;
       var exterior = $(".exterior-wrapper");
       var interior = $(".interior-wrapper");
@@ -157,7 +123,7 @@
       rightContainer.css("width", streamContainerWidth + "px");
 
       leftContainer.css("margin-left", "25px");
-      rightContainer.css("margin-left", (window.innerWidth- 360 - 75) + "px");
+      rightContainer.css("margin-left", (window.innerWidth - 360) + "px");
 
       InitializeStreams(leftContainer, options);
       InitializeStreams(rightContainer, options);
@@ -196,7 +162,38 @@
 
       var windowLocation = '';
       var entries = $('.navigation-link');
-      entries.each(changeWindow($(this)));
+      entries.each(function () {
+        $(this).bind('click', function () {
+          $.get(this.href)
+          .done(function (data) {
+            $('#content-body').empty();
+            $('#content-header').empty();
+
+            var responseTitle = $($(data)[1]).html();
+            var responseBody = $('#content-body #content', data).html();
+
+            $('#content-body').append(responseBody);
+            $('#content-header').append(responseTitle);
+
+            history.pushState({}, '', this.href);
+
+            var scrollSettings = {
+              cursorcolor: '#00ff00',
+              autohidemode: false,
+              cursorborder: '0px',
+              cursorborderradius: '0px'
+            };
+
+            var wrapper = $('#content-body');
+            wrapper.niceScroll(scrollSettings);
+
+            $('#start-menu-display').css('display', 'none');
+          });
+
+          // hideMenus();
+          return false;
+        });
+      });
 
       $('.start-menu-link').bind('click', function () {
         // We need to save the link name so it's skipped
