--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
   <script type="text/javascript" src="{{ "/javascript/main.js" }}"></script>
   <script type="text/javascript" src="{{ "/javascript/glyph-stream.js" }}"></script>
 
+  <!-- jQuery Cookies https://github.com/carhartl/jquery-cookie -->
+  <script type="text/javascript" src="{{ "/javascript/jquery.cookie.js" }}"></script>
+
   <script type="text/javascript" src="{{ "/javascript/jquery.jquery-scroll.js" }}"></script>
   <link rel="stylesheet" href="{{ "/css/jquery.jquery-scroll.css" }}">
 
@@ -23,7 +26,7 @@
   <script type="text/javascript">
     // Default stream settings
     var options = {
-        quantity: 5
+        quantity: 2
       , minSpeed: 30
       , maxSpeed: 45
       , minLength: 6
