fix for submenu item spacing and submenu hiding on page load

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,6 +188,9 @@
             wrapper.niceScroll(scrollSettings);
 
             $('#start-menu-display').css('display', 'none');
+            $('.sub-menu').each(function( index, value ){
+              $(value).css('display', 'none');
+            });
           });
 
           // hideMenus();
