--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,11 @@
   <script type="text/javascript" src="{{ "/javascript/jquery.jquery-scroll.js" }}"></script>
   <link rel="stylesheet" href="{{ "/css/jquery.jquery-scroll.css" }}">
 
+  <!-- yay we're going to use angular.js! -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+  
+
   <!-- Font Awesome - icons as a font -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
