--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,8 @@
 
   <!-- yay we're going to use angular.js! -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script type="text/javascript" src="{{ "/javascript/kenscontroller.js" }}"></script>
 
-  
 
   <!-- Font Awesome - icons as a font -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
