jekyll / angularjs compatiblity patch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="exterior-wrapper" ng-controller="kenscontroller">
 
       {% include header.html %}
-      <div style="display:none">{{ testvalue }}</div>
+      <div style="display:none">[[ testvalue ]]</div>
     <div class="interior-wrapper">
       {% include navigation.html %}
       <div id="content">
