--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="kensapp">
+<html>
 
   {% include head.html %}
 
-  <body class="exterior-wrapper" ng-controller="kenscontroller">
+  <body class="exterior-wrapper" ng-app="kensapp" ng-controller="kenscontroller">
 
       {% include header.html %}
-      <div style="display:none">[[ testvalue ]]</div>
+      <div style="display:none">
+        [[ kenscontroller.testvalue ]]
+      </div>
     <div class="interior-wrapper">
       {% include navigation.html %}
       <div id="content">
