--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
       {% include header.html %}
       <div style="display:none">
-        [[ kenscontroller.testvalue ]]
+        [[ testvalue ]]
       </div>
     <div class="interior-wrapper">
       {% include navigation.html %}
