trying a different delimiter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 
   {% include head.html %}
 
-  <body class="exterior-wrapper" ng-app="kensapp" ng-controller="kenscontroller as data">
+  <body class="exterior-wrapper" ng-app="kensapp" ng-controller="kenscontroller">
 
       {% include header.html %}
       <div style="display:none">
-        [[ data.testvalue ]]
+        // testvalue //
       </div>
     <div class="interior-wrapper">
       {% include navigation.html %}
